# toptimization

./: .gitignore  pyproject.toml
checker/: check_gpu.py  profile_bottleneck.py
examples/: bridge_2d.yaml  cantilever_2d.yaml  cantilever_3d.yaml  cantilever_small.yaml  mbb_beam_2d.yaml
src/toptimization/: __init__.py  __main__.py  cli.py  material.py  mesh.py  problem.py
src/toptimization/fem/: __init__.py  fields.py  fused_kernels.py  kernels.py  preconditioner.py  solver.py  sparse_solve.py
src/toptimization/optimizer/: __init__.py  filter.py  oc.py  simp.py
src/toptimization/viz/: __init__.py  export.py  plot2d.py
tests/: test_material.py  test_mesh.py  test_problem.py
